--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,6 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
+<section>
+  <div class="container">
+    <h1>cppdist-com-emberjs</h1>
+  </div>
+</section>
 {{outlet}}
