Playing with models

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -14,7 +14,7 @@
       {{#if session.isAuthenticated}}
         <button
           {{action "logout" session on="click"}}
-          class="btn btn-outline-secondary btn-sm" type="button">
+          class="btn btn-outline-primary btn-sm" type="button">
           Logout
         </button>
 
